style.css
/* ... */
li, a, button{
    font-family: "Mozilla Headline", sans-serif;
    font-weight: bold;
    font-size: 16px;
    color: #edf0f1;
    text-decoration: none;
}

nav_bar{
    font-weight: bold;
    display: flex;
    justify-content: left;
    align-items: center;
    padding: 1px 50px;
    background-color: #070228b9;
    z-index: 20;
    flex-wrap: nowrap;
    gap: 12px;
}
.nav_logo{
    width: 60px;
    height: 30px;    
}
.nav__links{
    list-style: none;
}
.nav__links li{
    display: inline-block;
    padding: 0px 15px;
}

.nav__links li a{
    transition: all 0.3s ease 0s;
}
.nav__links li a:hover{
    color: #970925;
}

